<resources>
    <string name="app_name">MyMovies</string>
    <string name="poster_of_movie">Film poster</string>
    <string name="most_popular">Popular</string>
    <string name="top_rated">Top rated</string>
    <string name="add_to_favourite">Added to the favourite</string>
    <string name="deleted_from_favourite">Deleted from the favourite</string>
    <string name="item_main">Main</string>
    <string name="item_favourite">Favourite</string>
    <string name="play_trailer">Play trailer</string>
    <string name="title">Title:</string>
    <string name="original_title">Original Title:</string>
    <string name="rating">Rating:</string>
    <string name="release_date">Release date:</string>
    <string name="description">Description:</string>
    <string name="image_of_big_poster">Image of Big Poster</string>
    <string name="add_to_favourite_star">Add to favourite</string>
</resources>
